--- a/styles/sass/partials/index/_projects.scss
+++ b/styles/sass/partials/index/_projects.scss
@@ -3,7 +3,10 @@
     background-color: rgb(248,249,250);
     h2 {
         font-weight: bold;
+        text-align: center;
         font-size: 2rem;
+        position: relative;
+        top: 50px;
     }
 }
 
@@ -12,30 +15,41 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    .imageFlex {
-        display: flex;
-        figure {
-            width: calc(33% - 20px);
-            
-        }
-    }
-    
+    height: calc(100% - 90px);
 }
 
-.onHover {
-    position: relative;
-    bottom: 100%;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    color: #1c87c9;
-    background-color: rgba(200, 200, 200, 0.5);
-    transition: all 400ms ease-out;
-    text-align: center;
+.titleFlex {
+    display: flex
+}
+
+.imageFlex {
     display: flex;
+    .card {
+        text-align: center;
+    }
 }
 
-.onHover:hover {
+// The idea for this next code block comes from https://www.w3schools.com/css/tryit.asp?filename=trycss_css_image_overlay_fade
+.container {
+    position: relative;
+    margin: 5px;
+    .centeredText {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: rgb(248,249,250);
+        font-size: 1.2rem;
+        font-weight: 500;
+        opacity: 0;
+        transition: opacity 0.1s;
+    }
+}
+.container:hover img {
+    filter: blur(10px); 
+}
+  
+.container:hover .centeredText {
     opacity: 1;
 }
 
