--- a/styles/sass/partials/index/_resume.scss
+++ b/styles/sass/partials/index/_resume.scss
@@ -5,7 +5,11 @@
     background-color: rgb(255,255,255);
     h2 {
         font-weight: bold;
+        text-align: center;
         font-size: 2rem;
+        position: relative;
+        top: 50px;
+        margin-bottom: 65px;
     }
 }
 
