--- a/styles/sass/partials/index/_techStack.scss
+++ b/styles/sass/partials/index/_techStack.scss
@@ -3,6 +3,14 @@
 .techStack {
     height: 600px;
     background-color: rgb(248,249,250);
+    h2 {
+        font-weight: bold;
+        text-align: center;
+        font-size: 2rem;
+        padding-top: 50px;
+        z-index: 10 ;
+        position: relative;
+    }
 }
 
 .techStackFlex {
@@ -10,11 +18,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    h2 {
-        margin-bottom: 50px;
-        font-size: 2rem;
-        font-weight: bold;
-    }
+    height: 100%;
+    position: relative;
+    bottom: 90px;
+    z-index: 0;
 }
 
 .icons {
