--- a/styles/style.css
+++ b/styles/style.css
@@ -411,6 +411,13 @@ section.aboutMe {
   height: 600px;
   background-color: rgb(255, 255, 255);
 }
+section.aboutMe h2 {
+  font-weight: bold;
+  text-align: center;
+  font-size: 2rem;
+  position: relative;
+  top: 50px;
+}
 
 .aboutMeFlex {
   height: 100%;
@@ -427,11 +434,8 @@ section.aboutMe {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-.aboutMeFlex h2 {
-  margin-bottom: 31px;
-  font-size: 2rem;
-  font-weight: bold;
+  position: relative;
+  bottom: 40px;
 }
 
 .textFlex h3 {
@@ -474,6 +478,14 @@ section.aboutMe {
   height: 600px;
   background-color: rgb(248, 249, 250);
 }
+.techStack h2 {
+  font-weight: bold;
+  text-align: center;
+  font-size: 2rem;
+  padding-top: 50px;
+  z-index: 10;
+  position: relative;
+}
 
 .techStackFlex {
   display: -webkit-box;
@@ -489,11 +501,10 @@ section.aboutMe {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-.techStackFlex h2 {
-  margin-bottom: 50px;
-  font-size: 2rem;
-  font-weight: bold;
+  height: 100%;
+  position: relative;
+  bottom: 90px;
+  z-index: 0;
 }
 
 .icons {
@@ -539,7 +550,11 @@ section.aboutMe {
 }
 .resumeSummary h2 {
   font-weight: bold;
+  text-align: center;
   font-size: 2rem;
+  position: relative;
+  top: 50px;
+  margin-bottom: 65px;
 }
 
 .experienceContainer {
@@ -616,7 +631,10 @@ section.aboutMe {
 }
 .projects h2 {
   font-weight: bold;
+  text-align: center;
   font-size: 2rem;
+  position: relative;
+  top: 50px;
 }
 
 .projectsFlex {
@@ -633,32 +651,47 @@ section.aboutMe {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: calc(100% - 90px);
 }
-.projectsFlex .imageFlex {
+
+.titleFlex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-.projectsFlex .imageFlex figure {
-  width: calc(33% - 20px);
-}
 
-.onHover {
-  position: relative;
-  bottom: 100%;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  color: #1c87c9;
-  background-color: rgba(200, 200, 200, 0.5);
-  -webkit-transition: all 400ms ease-out;
-  transition: all 400ms ease-out;
+.imageFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.imageFlex .card {
   text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
-.onHover:hover {
+.container {
+  position: relative;
+  margin: 5px;
+}
+.container .centeredText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: rgb(248, 249, 250);
+  font-size: 1.2rem;
+  font-weight: 500;
+  opacity: 0;
+  -webkit-transition: opacity 0.1s;
+  transition: opacity 0.1s;
+}
+
+.container:hover img {
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+}
+
+.container:hover .centeredText {
   opacity: 1;
 }
